--- a/schedule.qmd
+++ b/schedule.qmd
@@ -6,7 +6,7 @@ toc: false
 sidebar: false
 page-layout: full
 ---
- 
+   
 ```{r packages-data, include=FALSE} 
 library(tidyverse)
 library(knitr)
@@ -25,8 +25,10 @@ Below is the schedule for the semester. You can find the materials for each cour
 The readings refer to following texts:
 
 - BH: Blitzstein and Hwang, [*Introduction to Probability, Second Edition*](https://projects.iq.harvard.edu/stat110/home).
-- H1: Hansen, [*Introduction to Econometrics*](https://www.ssc.wisc.edu/~bhansen/probability/Probability.pdf). 
-- H2: Hansen, [*Econometrics*](https://www.ssc.wisc.edu/~bhansen/econometrics/Econometrics.pdf).
+- UG: Blackwell, [*A User's Guide to Statistical Inference and Regression*](https://mattblackwell.github.io/gov2002-book/)
+- HE: Hansen, [*Econometrics*](https://www.ssc.wisc.edu/~bhansen/econometrics/Econometrics.pdf).
+
+The BH and UG readings are the ones that we will focus on, but I have also included references for Hansen in case you have that book and want to see a different or more technical discussion of the material. 
 
  
 ```{r build-table, echo=FALSE, results="asis"}
