--- a/materials/index.qmd
+++ b/materials/index.qmd
@@ -6,3 +6,9 @@ title: "Readings, lectures, and videos"
 
 Each class session has a set of required readings that you should complete ***before*** lecture. 
 
+
+Here is a list of all the lecture slides the course:
+
+0. [Introduction](/files/slides/00_intro_handout.pdf)
+1. [Probability](/files/slides/01_probability_handout.pdf)
+2. [Conditional Probability](/files/slides/02_conditional_probability_handout.pdf)
