--- a/materials/week_01.qmd
+++ b/materials/week_01.qmd
@@ -9,4 +9,13 @@ date: 2023-01-23
 - The [syllabus](/syllabus.qmd) and [schedule](/schedule.qmd) pages. 
 - BH Ch 2 
 
+## Assignments
+
+- Problem Set 1 will be due February 1st, 11:59pm. 
+
+
 ## Slides
+
+- Introduction: [Slides](/files/slides/00_intro.pdf) | [Handout](/files/slides/00_intro_handout.pdf)
+- Probability: [Slides](/files/slides/01_probability.pdf) | [Handout](/files/slides/01_probability_handout.pdf)
+- Conditional Probability: [Slides](/files/slides/02_conditional_probability.pdf) | [Handout](/files/slides/02_conditional_probability_handout.pdf)
