--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -154,7 +154,7 @@ If you feel there has been an error in the grading of one your assignment, you m
 
 
 ## Office Hours and Availability
-My office hours are TBD. If you have questions about the course material, computational issues, or other course-related issues please do not hesitate to set up an appointment with either any of us.
+My office hours are Mondays 2-4pm, but if there is a conflict with that time, let me know and I can probably set up another time. If you have questions about the course material, computational issues, or other course-related issues please do not hesitate to set up an appointment with either any of us. 
 
 If you have a general question, you can also post it on Ed. This is almost always the fastest way to get an answer. However, you can also email me directly at [mblackwell@gov.harvard.edu](mailto:mblackwell@gov.harvard.edu). If the question is of general interest, I will forward the question and my answer to the class. Make sure to tell me explicitly in your email if you would like to stay anonymous.
 
