--- a/materials/index.qmd
+++ b/materials/index.qmd
@@ -13,3 +13,4 @@ Here is a list of all the lecture slides the course:
 1. [Probability](/files/slides/01_probability_handout.pdf)
 2. [Conditional Probability](/files/slides/02_conditional_probability_handout.pdf)
 3. [Random Variables](/files/slides/03_variables_handout.pdf)
+4. [Expectation](/files/slides/04_expectation_handout.pdf)
