--- a/assignments/index.qmd
+++ b/assignments/index.qmd
@@ -17,3 +17,4 @@ Here you will find a links to assignments and resources for those assignments.
 - [Problem Set 1](/assignments/01_problem_set.qmd)
 - [Problem Set 2](/assignments/02_problem_set.qmd)
 - [Problem Set 3](/assignments/03_problem_set.qmd)
+- [Problem Set 4](/assignments/04_problem_set.qmd)
