--- a/materials/index.qmd
+++ b/materials/index.qmd
@@ -15,3 +15,4 @@ Here is a list of all the lecture slides the course:
 3. [Random Variables](/files/slides/03_variables_handout.pdf)
 4. [Expectation](/files/slides/04_expectation_handout.pdf)
 5. [Continuous Random Variables](/files/slides/05_continuous_handout.pdf)
+6. [Multivariate Distributions](/files/slides/06_multivariate_handout.pdf)
