--- a/materials/week_07.qmd
+++ b/materials/week_07.qmd
@@ -1,12 +1,13 @@
 ---
-title: "Week 6: Conditional expectation"
-date: 2023-02-27
+title: "Week 7: Estimation"
+date: 2023-03-06
 ---
 
 
 ## Readings 
 
-- [UG Ch 2](https://mattblackwell.github.io/gov2002-book/02_estimation.html) 
+- Tuesday: [UG Ch 2](https://mattblackwell.github.io/gov2002-book/02_estimation.html)
+- Thursday: [UG Ch 3.1-3.6](https://mattblackwell.github.io/gov2002-book/03_asymptotics.html)
 
 ## Assignments
 
