--- a/materials/week_07.qmd
+++ b/materials/week_07.qmd
@@ -17,3 +17,4 @@ date: 2023-03-06
 ## Slides
 
 - Sampling and Estimation: [Slides](/files/slides/08_sampling.pdf) | [Handout](/files/slides/08_sampling_handout.pdf)
+- Asymptotics: [Slides](/files/slides/09_asymptotics.pdf) | [Handout](/files/slides/09_asymptotics_handout.pdf)
