--- a/assignments/index.qmd
+++ b/assignments/index.qmd
@@ -18,3 +18,4 @@ Here you will find a links to assignments and resources for those assignments.
 - [Problem Set 2](/assignments/02_problem_set.qmd)
 - [Problem Set 3](/assignments/03_problem_set.qmd)
 - [Problem Set 4](/assignments/04_problem_set.qmd)
+- [Problem Set 5](/assignments/05_problem_set.qmd)
