--- a/assignments/index.qmd
+++ b/assignments/index.qmd
@@ -19,3 +19,4 @@ Here you will find a links to assignments and resources for those assignments.
 - [Problem Set 3](/assignments/03_problem_set.qmd)
 - [Problem Set 4](/assignments/04_problem_set.qmd)
 - [Problem Set 5](/assignments/05_problem_set.qmd)
+- [Problem Set 6](/assignments/06_problem_set.qmd)
