--- a/materials/index.qmd
+++ b/materials/index.qmd
@@ -19,3 +19,4 @@ Here is a list of all the lecture slides the course:
 7. [Conditional Expectation](/files/slides/07_cond_exp_handout.pdf)
 8. [Sampling and Estimation](/files/slides/08_sampling.pdf)
 9. [Asymptotics](/files/slides/09_asymptotics_handout.pdf)
+10. [Hypothesis Tests](/files/slides/10_hypothesis_tests_handout.pdf)
