--- a/assignments/index.qmd
+++ b/assignments/index.qmd
@@ -20,3 +20,4 @@ Here you will find a links to assignments and resources for those assignments.
 - [Problem Set 4](/assignments/04_problem_set.qmd)
 - [Problem Set 5](/assignments/05_problem_set.qmd)
 - [Problem Set 6](/assignments/06_problem_set.qmd)
+- [Problem Set 7](/assignments/07_problem_set.qmd)
