--- a/assignments/index.qmd
+++ b/assignments/index.qmd
@@ -21,3 +21,4 @@ Here you will find a links to assignments and resources for those assignments.
 - [Problem Set 5](/assignments/05_problem_set.qmd)
 - [Problem Set 6](/assignments/06_problem_set.qmd)
 - [Problem Set 7](/assignments/07_problem_set.qmd)
+- [Problem Set 8](/assignments/08_problem_set.qmd)
