--- a/assignments/index.qmd
+++ b/assignments/index.qmd
@@ -22,3 +22,4 @@ Here you will find a links to assignments and resources for those assignments.
 - [Problem Set 6](/assignments/06_problem_set.qmd)
 - [Problem Set 7](/assignments/07_problem_set.qmd)
 - [Problem Set 8](/assignments/08_problem_set.qmd)
+- [Problem Set 9](/assignments/09_problem_set.qmd)
